# beoseot

./: CMakeLists.txt
idola/: CMakeLists.txt
idola/inc/idola/: game.hpp  game_config.hpp  game_context.hpp  game_delta.hpp  graphics.hpp
idola/inc/idola/graphics/: blend_state.hpp  depth_stancil_state.hpp  model_loader.hpp  rasterizer_state.hpp  resource_uploader.hpp  shader.hpp  vertex_input_state.hpp  vertex_types.hpp
idola/inc/idola/inputs/: button.hpp  button_state.hpp  gamepad.hpp  gamepad_axis.hpp  gamepad_button.hpp  gamepad_input.hpp  inputs.hpp  keyboard.hpp  keyboard_input.hpp
idola/src/: game.cpp  game_context.cpp  model_loader.cpp  resource_uploader.cpp  shader.cpp
idola/src/graphics/: blend_state.cpp  model_loader.cpp  rasterizer_state.cpp  resource_uploader.cpp  shader.cpp
idola/src/inputs/: button.cpp  gamepad.cpp  gamepad_input.cpp  inputs.cpp  keyboard.cpp  keyboard_button.cpp
inc/: beoseot.hpp  camera.hpp  game_state.hpp  vertex_uniforms.hpp
inc/game_states/: title_state.hpp
inc/graphics/: vertex_types.hpp
inc/input/: input_manager.hpp  player_input.hpp
src/: beoseot.cpp  camera.cpp  main.cpp
src/game_states/: title_state.cpp
src/input/: input_manager.cpp
